started the fix on location for job

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -11,7 +11,7 @@
   </thead>
 
   <tbody>
-    <% @jobs.each do |job| %>
+    <% @jobs.each do |job| %> //this is a loop
       <tr>
         <td><%= job.name %></td>
         <td><%= link_to 'Show', job %></td>
