--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -16,6 +16,14 @@
     <%= form.text_field :name %>
   </div>
 
+  <div class="field">
+    <%= form.label :location %>
+    <%= form.text_field :location %>
+  </div>
+
+
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
