--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -23,8 +23,9 @@
 
   <div class="field">
     <%= form.label :job_id %>
-    <%= form.text_field :job_id %>
+    <%= form.collection_select(:job_id, Job.all, :id, :name)%>
   </div>
+
 
   <div class="actions">
     <%= form.submit %>
