--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -12,8 +12,14 @@
 
 <p>
   <strong>Job:</strong>
-  <%= @task.job %>
+  <%= @task.job_id %>
 </p>
+
+<p>
+  <strong>Complete:</strong>
+  <%= @task.complete %>
+</p>
+
 
 <%= link_to 'Edit', edit_task_path(@task) %> |
 <%= link_to 'Back', tasks_path %>
