task 5 and 10 are completed

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -20,6 +20,11 @@
   <%= @task.complete %>
 </p>
 
+<p>
+  <strong>Hours:</strong>
+  <%= @task.hours %>
+</p>
+
 
 <%= link_to 'Edit', edit_task_path(@task) %> |
 <%= link_to 'Back', tasks_path %>
